# pokete-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  pyproject.toml  run_pokete.py
pokete_tui/: __init__.py  agent_api.py  app.py  engine.py  screens.py  tui.tcss
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
screenshots/candidates/: README.md
tests/: api_qa.py  perf.py  playtest.py  qa.py  smoke_engine.py
